# multivariate-anomaly-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  build_preprocessed_data.py  data_download.py  data_loading.py  data_pipeline.txt  docker-compose.yml  inference.py  main.py  positional_encoding.py  preprocessing.py  project_overview.md  pyproject.toml  requirements-dev.txt  requirements.txt  transformer.py
TimeSeriesTransformer/: learnableTime2Vec.py  main.py  positional_encoding.py  slurminator_tranformer.sh  transformer.py
Transformer/InitialTransformer/: inference.py  main.py  positional_encoding.py  transformer.py
Transformer/TimeSeriesTransformer/: SC_main.py  evaluate.py  evaluate_electricity.py  learnableTime2Vec.py  main.py  main_electricity_data.py  main_electricity_data_ddp.py  slurminator_transformer.sh  slurminator_transformer_ddp.sh  time2vec.py  transformer.py
artifacts/anomalies/: baseline_anomalies.csv
configs/: benchmark_nab.yaml  benchmark_smd.yaml
dashboard/: api_client.py  app.py  datasets.py  mlflow_loader.py
dashboard/assets/: styles.css  websocket.js
docs/: Mid-Term Project Update.pptx  architecture.md  decisions.md  scores.txt
reports/: Twitter_volume_GOOG.html  Twitter_volume_GOOG_basic_eda.html  machine_temperature_system_failure.html  nyc_taxi.html  nyc_taxi_basic_eda.html  timeseries_anomalies.html
scripts/: aggregate_results.py
tests/: conftest.py  test_anomaly_io.py  test_checkpoint_roundtrip.py  test_config.py  test_custom_transformer.py  test_data_validation.py  test_evaluation.py  test_exceptions.py  test_labels.py  test_lstm_checkpoint.py  test_lstm_forecaster.py  test_multivariate_models.py  test_smd_loading.py  test_split.py  test_tranad.py
transformer/: .gitignore  config.py
(+140 files in other folders)
