[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-transformer"
version = "0.1.0"
description = "Time series transformer for anomaly detection project"
authors = [{name = "Julian"}, {name = "Lars"}]
requires-python = ">=3.11"

dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
